--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-size: 30px;
+}
+
 .orange-color {
     color: orange;
 }
@@ -19,6 +23,7 @@ h1 {
 .half-width {
     padding-left: 5%;
     width: 50%;
+    padding-right: 5%;
 }
 
 .half-width img {
@@ -43,4 +48,31 @@ h1 {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item {
+    width: 40%;
+    box-shadow: 10px 10px 40px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+#full-stack {
+    border-left: 10px solid tomato;
+}
+
+#baby-web {
+    border-left: 10px solid blue;
+}
+
+footer p {
+    text-align: center;
 }
